# dockers

./: .env.postgresql.example  .gitignore  cmd  docker-compose - 副本.yml  docker-compose.yml  publish-dockerhub.sh
3proxy/: check-proxy-v0.sh  check-proxy.sh  docker-compose.yml
GlusterFS/: add-new-node.sh  docker-compose.yml  setup-gluster-cluster.sh
GlusterFSSwarm/: Readme.txt  docker-compose.yml
JuiceFS/: .env.example  .env.postgresql.example  check.sh  deploy.sh  docker-compose.yml
Shadowsocks/: README.md  config.yaml  docker-compose.yml  web
WireGuard/: README.md  env.example
backup_folders/: .example.env  ChangeLog.md  Dockerfile  README.md  backup.sh  backup_folder_s3.sh  docker-compose.yml  entrypoint.sh
binanceAPI/: docker-compose.yml  nginx.conf
clash/: README.md  docker-compose.yml  helper.sh
fetch-docker-image-ssh/: fetch-docker-image-ssh
frp/: .env.example  generateFRP.sh  generate_proxies.sh  udp_proxies.toml
ipfs/: docker-compose.yml
kuma/: docker-compose.yml
metabase/: docker-compose.yml
minio/: .env.example  docker-compose-local.yml  docker-compose.yml  nginx.config
mongodb/: .env.example  docker-compose-single.yml  docker-compose.yml
netdata/: docker-compose.yml
nginxssl/: docker-compose.yml  graghql.conf
node/: Dockerfile  init.sh
node-playwright/: Dockerfile  docker-compose.yml  init.sh
postgresql/: .example.env  docker-compose_master.yml  docker-compose_master_slave.yml  (+7 more)
python/uv-ssh/: Dockerfile  Dockerfile.base  README.md  cicd.sh  docker-compose.base.yml  docker-compose.yml  init.sh  pyproject.toml
(+193 files in other folders)
